--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,20 @@
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/fullscreenp5.css">
 
-    <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-    <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/fullscreenp5.css">
 
-    <script src="sketch.js"></script>
-    <title> Chat Tings </title>
-  </head>
-  <body>
-  </body>
+	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+	<script language="javascript" type="text/javascript"
+		src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+	<script language="javascript"
+		src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+
+	<script src="sketch.js"></script>
+	<title> Chat Tings </title>
+</head>
+
+<body>
+</body>
+
 </html>
