--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/fullscreenp5.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 	<script language="javascript" type="text/javascript"
