--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 
 	<script src="sketch.js"></script>
-	<title> Chat Tings </title>
+	<title> Pictochat </title>
 </head>
 
 <body>
