--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 	<meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css">
+	<link id="pagestyle" rel="stylesheet" type="text/css" href="css/light.css">
 
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 	<script language="javascript" type="text/javascript"
