--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,12 @@
 <html>
 
 <head>
-	<link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/icons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-	<link rel="manifest" href="/icons/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<!--Links for favicon-->
+	<link id="icon16"rel="icon" type="image/png" sizes="16x16" href="/icons/norm/favicon-16x16.png">
+	<link id="icon32" rel="icon" type="image/png" sizes="32x32" href="/icons/norm/favicon-32x32.png">
+	<link id="icon96" rel="icon" type="image/png" sizes="96x96" href="/icons/norm/favicon-96x96.png">
 	<meta charset="UTF-8">
+
 	<link id="pagestyle" rel="stylesheet" type="text/css" href="css/light.css">
 
 	<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
